# Jogo--resist-ncia-Eq

./: Analise_orientada.md  Analise_projeto.md  Projeto_orientada.md  README.md  README.md.txt  uc01  uc01.md
Projeto Jogo de resistencia QT/: fiografico.h  mainwindow.cpp  mainwindow.h  resistor.h  resistorgrafico.h  seriescircuit.cpp  seriescircuit.h
jogo_resitores/: CMakeLists.txt  abstractcircuit.h  circuitgraphicsitem.h  gamecontroller.cpp  gamecontroller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parallelcircuit.cpp  parallelcircuit.h  resistor.h  resitor.cpp  seriescircuit.cpp  seriescircuit.h
resistors/: CMakeLists.txt  abstractcircuit.h  fiografico.cpp  main.cpp  parallelcircuit.h  resistorgrafico.cpp  terminalgrafico.h
